# activegraph-packs

./: .gitignore  .replit  .replit.bak  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  activegraph-builder-report.md  activegraph-direction-report.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  action-metadata-field.md  activegraph-behavior-triggers.md  activegraph-context-injection.md  activegraph-event-vocab.md  activegraph-pack-api-quirks.md  activegraph-persistence.md  activegraph-quirks.md  activegraph-relation-api.md  domain-pack-authoring.md  dual-target-portability.md  inspector-demo-ports.md  long-term-memory.md  orval-query-keys.md  principal-dedup-registry.md  restart-workflow-tool.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_pack.md
.github/workflows/: ci.yml
activegraph_packs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
artifacts/activegraph-ui/: index.html  package.json  vite.config.ts
attached_assets/: Pasted-ActiveGraph-Direction-Report-Pack-Based-Assistant-Subst_1780500272653.txt
bundles/: README.md  __init__.py  assistant.py  email_assistant.py  research_bundle.py  vc_bundle.py
bundles/examples/: research_example.py  (+3 more)
docs/: README.md  architecture.md  concepts.md  long-term-memory.md
packs/: README.md  __init__.py  demo_server.py
scripts/: dev.mjs
tests/: README.md  conftest.py  test_cross_pack_fixtures.py  test_memory_embedding_seam.py  test_memory_subject_scoping.py  test_pack_fixtures.py
(+189 files in other folders)
